# hierarchical-contrastive-qa-with-adversarial-unanswerable-detection

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  MANDATORY_FIXES_CHECKLIST.md  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  validate_fixes.py
configs/: ablation.yaml  default.yaml
models/: config.yaml
results/: results.json
scripts/: evaluate.py  predict.py  train.py
src/hierarchical_contrastive_qa_with_adversarial_unanswerable_detection/: __init__.py
src/hierarchical_contrastive_qa_with_adversarial_unanswerable_detection/data/: __init__.py  loader.py  preprocessing.py
src/hierarchical_contrastive_qa_with_adversarial_unanswerable_detection/evaluation/: __init__.py  analysis.py  metrics.py
src/hierarchical_contrastive_qa_with_adversarial_unanswerable_detection/models/: __init__.py  components.py  model.py
src/hierarchical_contrastive_qa_with_adversarial_unanswerable_detection/training/: __init__.py  trainer.py
src/hierarchical_contrastive_qa_with_adversarial_unanswerable_detection/utils/: __init__.py  config.py
tests/: __init__.py  test_data.py  test_model.py  test_training.py
